// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI uses any mode runs correctly with dependencies in package.json: stderr 1`] = `Array []`;

exports[`CLI uses any mode runs correctly with dependencies in package.json: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the last published version.",
  "pkg-name:",
  "@types/node (normal): 1.0.0 -> ^3.0.0",
  "@types/jest (normal): ^1.0.0 -> ^3.0.0",
  "@types/node (dev): 0.1.0 -> ^3.0.0",
  "@types/jest (dev): ^5.0.0 -> ^3.0.0",
  "@types/node (optional): 1.1.0 -> ^3.0.0",
  "@types/jest (optional): ^1.0.5 -> ^3.0.0",
]
`;

exports[`CLI uses any mode runs correctly with empty package.json: stderr 1`] = `Array []`;

exports[`CLI uses any mode runs correctly with empty package.json: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the last published version.",
  "No updates required.",
]
`;

exports[`CLI uses any mode runs correctly with no package.json: stderr 1`] = `Array []`;

exports[`CLI uses any mode runs correctly with no package.json: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the last published version.",
  "No updates required.",
]
`;

exports[`CLI uses any mode runs resolutions correctly: stderr 1`] = `Array []`;

exports[`CLI uses any mode runs resolutions correctly: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the last published version.",
  "pkg-name:",
  "@types/node (normal): 1.0.0 -> ^3.0.0",
  "@types/jest (normal): ^1.0.0 -> ^3.0.0",
  "@types/node (dev): 0.1.0 -> ^3.0.0",
  "@types/jest (dev): ^5.0.0 -> ^3.0.0",
  "@types/node (optional): 1.1.0 -> ^3.0.0",
  "@types/jest (optional): ^1.0.5 -> ^3.0.0",
  "@types/node (resolutions): 1.0.1 -> 3.0.0",
]
`;

exports[`CLI uses latest mode runs correctly with dependencies in package.json: stderr 1`] = `Array []`;

exports[`CLI uses latest mode runs correctly with dependencies in package.json: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the latest version.",
  "pkg-name:",
  "@types/node (normal): 1.0.0 -> ^2.0.0",
  "@types/jest (normal): ^1.0.0 -> ^3.0.0",
  "@types/node (dev): 0.1.0 -> ^2.0.0",
  "@types/jest (dev): ^5.0.0 -> ^3.0.0",
  "@types/node (optional): 1.1.0 -> ^2.0.0",
  "@types/jest (optional): ^1.0.5 -> ^3.0.0",
]
`;

exports[`CLI uses latest mode runs correctly with empty package.json: stderr 1`] = `Array []`;

exports[`CLI uses latest mode runs correctly with empty package.json: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the latest version.",
  "No updates required.",
]
`;

exports[`CLI uses latest mode runs correctly with no package.json: stderr 1`] = `Array []`;

exports[`CLI uses latest mode runs correctly with no package.json: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the latest version.",
  "No updates required.",
]
`;

exports[`CLI uses latest mode runs resolutions correctly: stderr 1`] = `Array []`;

exports[`CLI uses latest mode runs resolutions correctly: stdout 1`] = `
Array [
  "Using registry 'http://localhost:1234'",
  "Updating packages matching globs:",
  "- @types/node",
  "- @types/jest",
  "to the latest version.",
  "pkg-name:",
  "@types/node (normal): 1.0.0 -> ^2.0.0",
  "@types/jest (normal): ^1.0.0 -> ^3.0.0",
  "@types/node (dev): 0.1.0 -> ^2.0.0",
  "@types/jest (dev): ^5.0.0 -> ^3.0.0",
  "@types/node (optional): 1.1.0 -> ^2.0.0",
  "@types/jest (optional): ^1.0.5 -> ^3.0.0",
  "@types/node (resolutions): 1.0.1 -> 2.0.0",
]
`;
